--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ body {
 }
 .price-card__description {
   margin: 0;
-  padding: 40px 0;
+  padding: 40px 25px;
 }
 .price-card__options-list {
   margin: 0;
