--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ body {
   font-size: 20px;
   line-height: 24px;
   font-weight: 300;
-  margin: -3px 0 0 0;
+  margin: 0;
   padding: 0 0 33px 0;
 }
 .price-card__price {
